--- a/src/components/editor.css
+++ b/src/components/editor.css
@@ -2,5 +2,6 @@
     background-color: #303030;
     height: 100vh;
     width: 25vw;
-    min-width: 225px;
+    min-width: 275px;
+    max-width: 325px;
 }
