Added padding to the editor pane

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
 .html {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  background-color: #1f2022;
+  overflow: hidden; 
 }
 
 .body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  background-color: #1f2022;
+  overflow: hidden; 
 }
 
 .app-container {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    display: flex;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  display: flex;
 }
