Started 2D Heightmap viewer
Added basic implmentation for the heightmap viewer
BUG: On setting change, there appears to be a black bar on top of the heightmap image

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,10 @@
 }
 
 .app-container {
+  display: flex;
+  flex-direction: row;
+
   margin: 0;
   padding: 0;
   overflow: hidden;
-  display: flex;
 }
