--- a/src/components/viewport.css
+++ b/src/components/viewport.css
@@ -1,6 +1,13 @@
 .viewport {
-    background-color: #1f2022;
-    float: left;
-    height: 100vh;
-    width: 100%;
+  flex-grow: 1;
+  background-color: #1f2022;
+  height: 100vh;
+  text-align: center;
+}
+
+.viewport canvas {
+  position: relative;
+  top: 12vh;
+  width: 75vh;
+  height: 75vh;
 }
